2007-03-23  Werner Koch  <wk@g10code.com>

	* configure.ac: Set version to 0.3.7-wk4.

	* src/telnet_session.c (telnet_session_print): Factor code out
	to ..
	(do_telnet_session_print): .. new.  Add additional argument S2.
	(telnet_session_println): Change to use the new fucntion.  This is
	required so that we use just one write for the common case that
	the CRLF fits into the same buffer.  Some firewalls have problems
	with receiving an FTP command without the CRLF in one [acket and
	the CRLF in the next one.

2007-02-08  Werner Koch  <wk@g10code.com>

	* src/oftpd.c (main): s/PACKAGE/PACKAGE_NAME/
	s/VERSION/PACKAGE_VERSION/.

	* configure.in: Renamed to configure.ac and converted to modern
	style.
	* acconfig.h: Removed.

2007-02-08  Marcus Brinkmann  <marcus@g10code.de>

	* src/telnet_session.c: Include <pthread.h>.
	(process_data): Enable cancellation.
	* src/ftp_session.c (netscape_hack): Likewise.
	(send_readme, do_list, do_nlst): Use cancellation cleanup handler.
	(set_pasv): Release socket_fd before invoking reply() in case of
	failure.
	(open_connection): Likewise.
	(do_pasv): Close outstanding passive port before invoking reply().
	(do_lpsv): Likewise.
	(do_epsv): Likewise.
	* src/file_list.c: Always include <pthread.h>.
	(fdprintf): Bump buffer size to PATH_MAX + 3.  Enable cancellation
	while writing.
	* src/ftp_listener.c (connection_handler): Do not use asynchronous
	cancellation.  Disable cancellation until further notice.

2007-02-06  Marcus Brinkmann  <marcus@g10code.de>

	* configure.in (AC_CHECK_HEADERS): Check for sys/sendfile.h.
	* src/file_list.c (file_nlst): Remove unused variable HIDDEN.
	* src/ftp_session.c [HAVE_SYS_SENDFILE_H]: Include
	<sys/sendfile.h>.
	(do_user, do_pass): Remove unused variable addr_port.
	(do_eprt): Remove unused variable HOST_PORT.
	(do_retr): Remove unused variable host_port.  Adjust format output
	parameter for timespec members, cast these to the format type.